--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ application/logs/*
 
 !application/*/.htaccess
 
+composer update
+
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
